--- a/src/entities/project/ui/templatecard/UI/styles.module.scss
+++ b/src/entities/project/ui/templatecard/UI/styles.module.scss
@@ -2,13 +2,13 @@
   display: grid;
   grid-template: 1fr / 4fr 4fr 4fr 4fr 1fr;
   padding: 10px 15px;
-  height: 80px;
+  min-height: 80px;
   grid-template-areas: "item1 item2 item3 item4 item5";
 
   @media (max-width: 992px) {
     grid-template: 1.5fr 1fr / 3fr 3fr 3fr 1fr;
     row-gap: 15px;
-    height: 140px;
+    min-height: 140px;
     grid-template-areas:
       "item1 item2 item3 item5"
       "item4 item4 item4 item4";
@@ -16,8 +16,7 @@
 
   @media (max-width: 768px) {
     padding: 15px;
-    height: 315px;
-    height: unset;
+    min-height: 315px;
     grid-template: unset;
     grid-template-areas:
       "item5"
