--- a/src/features/project/manager/runProject/UI/styles.module.scss
+++ b/src/features/project/manager/runProject/UI/styles.module.scss
@@ -1,7 +1,8 @@
 .button {
   padding: 15px;
-  font-size: 26px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 1;
+  border-radius: 15px;
 }
