--- a/src/features/project/manager/sendToBot/UI/styles.module.scss
+++ b/src/features/project/manager/sendToBot/UI/styles.module.scss
@@ -1,6 +1,8 @@
 .button {
-  font-size: 22px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  padding: 10px;
+  border-radius: 15px;
 }
