--- a/src/widgets/communication/chat/styles.module.scss
+++ b/src/widgets/communication/chat/styles.module.scss
@@ -1,3 +1,9 @@
+.wrapper {
+  display: grid;
+  align-items: center;
+  // justify-content: center;
+}
+
 .chat {
   display: grid;
   grid-auto-flow: column;
