--- a/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
@@ -2,10 +2,11 @@
   display: grid;
   grid-template: 1fr min-content / 1fr;
   row-gap: 15px;
-  min-height: 230px;
+  min-height: 220px;
+  position: relative;
 
   @media (max-width: 768px) {
-    height: 500px;
+    min-height: 500px;
     align-items: flex-start;
   }
 }
@@ -19,14 +20,18 @@
     grid-template: unset;
     row-gap: 15px;
     grid-template-areas:
-      "item3"
+      // "item3"
+
       "item1"
       "item2";
-    padding-top: 10px;
+    padding-top: 35px;
+    height: 100%;
 
     &.manager_chat {
+      grid-template: min-content min-content 1fr / 1fr;
       grid-template-areas:
-        "item3"
+        // "item3"
+
         "item1"
         "item4"
         "item2";
@@ -34,13 +39,6 @@
   }
 
   &__manager_completed {
-    .card__description__status {
-      @media (max-width: 768px) {
-        padding: 15px 0;
-        font-size: 16px;
-      }
-    }
-
     .card__info {
       display: grid;
       grid-template: 1fr / 1fr 1.5fr;
@@ -53,7 +51,7 @@
       &__data {
         display: grid;
         grid-template: repeat(4, 1fr) / 1fr;
-        row-gap: 5px;
+        row-gap: 2px;
         padding-bottom: 0;
         border-bottom: none;
         padding-right: 20px;
@@ -155,13 +153,13 @@
       border-radius: 10px;
       background: rgba(15, 105, 201, 0.1);
       padding: 35px 0;
-      font-size: 24px;
+      font-size: 20px;
 
       p {
         color: var(--Personal-colors-black);
         font-style: normal;
         font-weight: 500;
-        line-height: 1;
+        line-height: 0.75;
       }
 
       @media (max-width: 992px) {
@@ -169,7 +167,7 @@
       }
 
       @media (max-width: 768px) {
-        padding: 25px 0;
+        padding: 20px 0;
         font-size: 16px;
       }
     }
@@ -187,8 +185,9 @@
     }
 
     @media (max-width: 768px) {
-      grid-template: unset;
-      grid-auto-flow: row;
+      // grid-template: unset;
+      // grid-auto-flow: row;
+      grid-template: min-content 1fr / 1fr;
       row-gap: 15px;
       border-right: none;
       grid-area: item2;
@@ -203,7 +202,7 @@
 
       @media (max-width: 992px) {
         grid-template: repeat(3, 1fr) / 1fr;
-        row-gap: 5px;
+        row-gap: 2px;
         padding-bottom: 0;
         border-bottom: none;
         border-right: 1px solid var(--Card-separator);
@@ -287,7 +286,7 @@
         align-items: center;
         justify-content: center;
         column-gap: 10px;
-        padding: 10px 5px;
+        padding: 5px;
         border-radius: 10px;
         border: 0.2px solid rgba(0, 0, 0, 0.1);
         background: #fff;
@@ -389,6 +388,11 @@
 
           @media (max-width: 768px) {
             padding: 15px 5px;
+
+            svg {
+              width: 26px;
+              height: 26px;
+            }
           }
         }
       }
@@ -461,7 +465,6 @@
 
       @media (max-width: 768px) {
         padding-left: 0;
-        grid-template: 1fr / repeat(2, 1fr);
       }
     }
 
@@ -552,7 +555,7 @@
   grid-auto-flow: row;
   align-items: center;
   @media (max-width: 768px) {
-    height: 500px;
+    min-height: 500px;
   }
 }
 
@@ -560,7 +563,7 @@
   display: grid;
   grid-template: 1fr min-content / 1fr;
   align-items: center;
-  height: 500px;
+  min-height: 500px;
 
   .top {
     display: grid;
@@ -584,36 +587,58 @@
   }
 
   @media (max-width: 768px) {
-    grid-area: item3;
-    justify-content: flex-end;
-    margin-bottom: -20px;
+    // grid-area: item3;
+    // justify-content: flex-end;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px 15px;
+    // margin-bottom: -20px;
   }
 }
 
 .chat__btn {
   display: grid;
-  align-items: flex-end;
-  background: var(--Gradients-Gradient-1);
-  padding: 10px;
-  border-radius: 10px;
-  justify-content: center;
-  align-content: center;
-
-  p {
-    color: var(--Personal-colors-White);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1;
-  }
-
-  @media (max-width: 992px) {
-    padding: 10px 5px;
-  }
+  align-content: flex-end;
+  justify-content: flex-end;
+  height: 100%;
 
   @media (max-width: 768px) {
-    grid-area: item4;
+    justify-content: unset;
     margin: 0 15px;
+    grid-area: item4;
+  }
+
+  button {
+    display: grid;
+    border-radius: 12px;
+    background: var(--Gradients-Gradient-1);
+    box-shadow: 0px 3px 6px 0px rgba(43, 90, 212, 0.42);
+    padding: 30px 0;
+    min-width: 45px;
+
+    p {
+      color: var(--Personal-colors-White);
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 0.75;
+    }
+
+    svg {
+      height: 30px;
+    }
+
+    @media (max-width: 768px) {
+      justify-content: center;
+      height: 40px;
+      margin: 0;
+      padding: 0;
+
+      svg {
+        height: 18px;
+      }
+    }
   }
 }
 
