--- a/src/widgets/project/advertiser/UI/advProjects/card/skeleton/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/advProjects/card/skeleton/styles.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template: 4fr 1fr / 1fr;
   row-gap: 20px;
-  min-height: 230px;
+  min-height: 220px;
 
   @media (max-width: 992px) {
     row-gap: 15px;
@@ -13,15 +13,23 @@
   }
 
   @media (max-width: 768px) {
-    height: 500px;
+    min-height: 500px;
     row-gap: 15px;
     grid-template: 1fr 32px / 1fr;
+
+    &.completed {
+      min-height: 500px;
+    }
   }
 
   .card {
     display: grid;
     grid-template: 1fr / 7.5fr 12fr 1.4fr;
     padding-top: 15px;
+
+    @media (max-width: 768px) {
+      padding-top: 35px;
+    }
 
     &__manager_completed {
       .card__info {
@@ -39,7 +47,7 @@
         &__data {
           display: grid;
           grid-template: repeat(4, 1fr) / 1fr;
-          row-gap: 5px;
+          row-gap: 2px;
           padding-bottom: 0;
           padding-right: 20px;
 
@@ -58,11 +66,11 @@
     }
 
     @media (max-width: 768px) {
-      grid-template: 0.8fr 2fr/ 1fr;
+      grid-template: 0.7fr 2fr/ 1fr;
       row-gap: 15px;
 
       &.manager_chat {
-        grid-template: 1fr 0.4fr 2fr / 1fr;
+        grid-template: 0.85fr 0.4fr 2fr / 1fr;
 
         .card__info {
           @media (max-width: 768px) {
@@ -78,12 +86,16 @@
 
     &__description {
       display: grid;
-      grid-template: 1.5fr 2.5fr / 1fr;
-      row-gap: 10px;
+      grid-template: min-content 1fr / 1fr;
+      row-gap: 20px;
       padding: 0 20px 0 30px;
 
       @media (max-width: 992px) {
         padding: 0 15px;
+      }
+
+      @media (max-width: 768px) {
+        row-gap: 10px;
       }
 
       &__data {
@@ -131,7 +143,7 @@
 
         @media (max-width: 992px) {
           grid-template: repeat(3, 1fr) / 1fr;
-          row-gap: 5px;
+          row-gap: 2px;
         }
       }
 
@@ -207,7 +219,7 @@
         div {
           display: grid;
           grid-auto-flow: row;
-          row-gap: 5px;
+          row-gap: 2px;
           align-content: center;
           justify-items: center;
         }
@@ -253,9 +265,6 @@
           grid-template: 1fr / repeat(2, 1fr);
           grid-gap: 5px;
         }
-      }
-
-      @media (max-width: 992px) {
       }
     }
   }
