--- a/src/widgets/project/manager/UI/managerNewProject/card/skeleton/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerNewProject/card/skeleton/styles.module.scss
@@ -1,21 +1,155 @@
 .wrapper {
   display: grid;
-  grid-template: 8fr 3fr / 1fr;
-  min-height: 110px;
+  padding: 10px 15px;
+  min-height: 70px;
+
+  @media (max-width: 992px) {
+    min-height: 140px;
+  }
+  @media (max-width: 768px) {
+    min-height: 315px;
+  }
 
   .card {
     display: grid;
-    grid-template: 1fr / 1fr 1fr 2fr 2fr 3fr 0.5fr;
-    padding: 15px 0;
+    grid-template: 1fr / 1fr 1fr 2fr 30px;
+    grid-template-areas: "item1 item2 item3 item4";
 
-    &__id,
-    &__date,
-    &__tarif,
-    &__price {
+    @media (max-width: 992px) {
+      grid-template: 1fr 2fr / 1fr 1fr 30px;
+      row-gap: 15px;
+      grid-template-areas:
+        "item1 item2 item4"
+        "item3 item3 item3";
+    }
+
+    @media (max-width: 768px) {
+      padding-top: 25px;
+      grid-template: min-content 1fr 2fr / 1fr;
+      row-gap: 15px;
+      grid-template-areas:
+        "item1"
+        "item2"
+        "item3";
+    }
+
+    &__name {
       display: grid;
       grid-auto-flow: row;
       align-content: center;
-      justify-items: center;
+      align-items: center;
+      row-gap: 10px;
+      padding-right: 20px;
+      grid-area: item1;
+
+      @media (max-width: 992px) {
+        padding-right: 15px;
+      }
+
+      @media (max-width: 768px) {
+        padding: 0;
+        border-right: none;
+      }
+
+      div {
+        display: grid;
+        column-gap: 10px;
+        grid-template: 1fr / 2fr 1fr;
+      }
+    }
+
+    &__info {
+      // display: grid;
+      // grid-template: repeat(2, 1fr) / 1fr;
+      // padding: 0 20px;
+      // grid-area: item2;
+      // align-content: center;
+      // align-items: center;
+
+      // @media (max-width: 992px) {
+      //   grid-template: 1fr / repeat(2, 1fr);
+      //   padding: 0 15px;
+      //   margin-right: 15px;
+      //   column-gap: 20px;
+      // }
+
+      // @media (max-width: 768px) {
+      //   grid-template: repeat(2, 1fr) / 1fr;
+      //   padding: 0;
+      //   margin: 0;
+      //   row-gap: 2px;
+
+      //   div{
+      //     border-radius: 10px;
+      //     height: 100%;
+      //   }
+      // }
+
+      display: grid;
+      grid-template: repeat(2, 1fr) / 1fr;
+      padding: 0 20px;
+      grid-area: item2;
+
+      @media (max-width: 992px) {
+        grid-template: 1fr / repeat(2, 1fr);
+        padding: 0 15px;
+        margin-right: 15px;
+        column-gap: 20px;
+      }
+
+      @media (max-width: 768px) {
+        grid-template: repeat(2, 1fr) / 1fr;
+        padding: 0;
+        margin: 0;
+        row-gap: 2px;
+      }
+
+      .info {
+        display: grid;
+        grid-template: 1fr / 1.5fr 1fr;
+
+        @media (max-width: 992px) {
+          grid-template: repeat(2, 1fr) / 1fr;
+          justify-items: center;
+
+          div {
+            width: 100px;
+          }
+        }
+
+        @media (max-width: 768px) {
+          grid-template: unset;
+
+          div {
+            border-radius: 10px;
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        .info_mini {
+          @media (max-width: 768px) {
+            display: none;
+          }
+        }
+      }
+    }
+
+    &__buttons {
+      display: grid;
+      grid-template: 1fr / repeat(2, 1fr);
+      column-gap: 20px;
+      padding: 0 20px;
+      grid-area: item3;
+
+      @media (max-width: 992px) {
+        padding: 15px 0 0 0;
+      }
+
+      @media (max-width: 768px) {
+        grid-template: repeat(2, 1fr) / 1fr;
+        row-gap: 10px;
+      }
     }
   }
 }
