--- a/src/widgets/project/manager/UI/managerProject/card/UI/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerProject/card/UI/styles.module.scss
@@ -1,198 +1,382 @@
 .wrapper {
   display: grid;
-  grid-auto-flow: row;
-  row-gap: 20px;
-  padding-top: 20px;
+  grid-template: 1fr min-content / 1fr;
+  row-gap: 15px;
+  min-height: 220px;
+  position: relative;
 
-  .card {
-    display: grid;
+  @media (max-width: 768px) {
+    min-height: 500px;
+    align-items: flex-start;
+  }
+}
 
-    &.grid__active {
-      grid-template: 1fr / 7.5fr 12fr 1.4fr;
+.card {
+  display: grid;
+  grid-template: 1fr / 7.5fr 12fr 1.4fr;
+  padding-top: 15px;
+
+  @media (max-width: 768px) {
+    grid-template: min-content min-content 1fr / 1fr;
+    grid-template-areas:
+      "item1"
+      "item4"
+      "item2";
+
+    row-gap: 15px;
+    padding-top: 35px;
+    height: 100%;
+
+    &.request_approve {
+      grid-template: min-content min-content 1fr / 1fr;
+      grid-template-areas:
+        "item1"
+        "item4"
+        "item2";
     }
+  }
 
-    &.grid__completed {
-      grid-template: 1fr / 9.75fr 9.75fr 1.4fr;
-    }
-
-    &__description {
+  &__manager_completed {
+    .card__info {
       display: grid;
-      grid-auto-flow: row;
-      row-gap: 20px;
-      padding: 0 20px 0 30px;
-      border-right: 1px solid var(--Card-separator);
+      grid-template: 1fr / 1fr 1.5fr;
+
+      @media (max-width: 768px) {
+        grid-template: min-content 1fr / 1fr;
+        grid-auto-flow: row;
+      }
 
       &__data {
         display: grid;
-        grid-auto-flow: column;
-        align-items: end;
-        justify-content: space-between;
-        padding: 10px 0;
-        border-bottom: 1px solid var(--Card-separator);
+        grid-template: repeat(4, 1fr) / 1fr;
+        row-gap: 2px;
+        padding-bottom: 0;
+        border-bottom: none;
+        padding-right: 20px;
+        border-right: 1px solid var(--Card-separator);
 
-        &__title {
-          display: grid;
-          grid-auto-flow: row;
-          row-gap: 10px;
-          p {
-            color: var(--Personal-colors-black);
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 0.75;
-          }
-          span {
-            color: var(--Personal-colors-black);
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 0.75;
-          }
+        @media (max-width: 992px) {
+          padding-right: 15px;
         }
 
-        &__date {
-          display: grid;
-          grid-auto-flow: row;
-          row-gap: 10px;
+        @media (max-width: 768px) {
+          padding-right: 0;
+          border-right: none;
+        }
 
-          span {
-            color: #a8a4a4;
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 0.75;
+        div {
+          grid-auto-flow: column;
+          column-gap: 10px;
+          grid-template: unset;
+          justify-content: space-between;
+        }
+      }
+    }
+  }
+
+  &__description {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 20px;
+    padding: 0 20px;
+    border-right: 1px solid var(--Card-separator);
+
+    @media (max-width: 992px) {
+      padding: 0 15px;
+      grid-template: min-content 1fr / 1fr;
+    }
+
+    @media (max-width: 768px) {
+      border-right: none;
+      row-gap: 10px;
+      grid-area: item1;
+    }
+
+    &__data {
+      display: grid;
+      grid-auto-flow: column;
+      align-items: end;
+      justify-content: space-between;
+      column-gap: 5px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid var(--Card-separator);
+
+      &__title {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+        }
+
+        span {
+          color: #a8a4a4;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+        }
+
+        @media (max-width: 992px) {
+          p {
+            font-size: 14px;
           }
         }
       }
 
-      &__status {
+      &__date {
         display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+
+        span {
+          color: #a8a4a4;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+
+          &.tariff_name {
+            color: var(--Personal-colors-main);
+          }
+        }
+      }
+    }
+
+    &__status {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
+      background: rgba(15, 105, 201, 0.1);
+      padding: 35px 0;
+      font-size: 20px;
+
+      p {
+        color: var(--Personal-colors-black);
+        font-style: normal;
+        font-weight: 500;
+        line-height: 0.75;
+      }
+
+      @media (max-width: 992px) {
+        font-size: 18px;
+      }
+
+      @media (max-width: 768px) {
+        padding: 20px 0;
+        font-size: 16px;
+      }
+    }
+  }
+
+  &__info {
+    display: grid;
+    grid-template: repeat(2, 1fr) / 1fr;
+    padding: 0 20px;
+    border-right: 1px solid var(--Card-separator);
+
+    @media (max-width: 992px) {
+      grid-template: 1fr / repeat(2, 1fr);
+      padding: 0 15px;
+    }
+
+    @media (max-width: 768px) {
+      grid-template: min-content 1fr / 1fr;
+      row-gap: 15px;
+      border-right: none;
+      grid-area: item2;
+    }
+
+    &__data {
+      display: grid;
+      grid-template: 1fr / repeat(3, 1fr);
+      border-bottom: 1px solid var(--Card-separator);
+      column-gap: 10px;
+      padding-bottom: 20px;
+
+      @media (max-width: 992px) {
+        grid-template: repeat(3, 1fr) / 1fr;
+        row-gap: 2px;
+        padding-bottom: 0;
+        border-bottom: none;
+        border-right: 1px solid var(--Card-separator);
+        padding-right: 15px;
+      }
+
+      @media (max-width: 768px) {
+        padding-right: 0;
+        border-right: none;
+      }
+
+      div {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        border-radius: 10px;
+        background: #f5f5f6;
         align-items: center;
         justify-content: center;
-        border-radius: 12px;
-        background: rgba(15, 105, 201, 0.1);
-        padding: 20px 0;
+        justify-items: center;
+        align-content: center;
+        padding: 0px 10px;
+
+        p {
+          color: rgba(0, 0, 0, 0.45);
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+        }
+
+        span {
+          color: var(--Personal-colors-black);
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+
+          display: grid;
+          grid-auto-flow: column;
+          column-gap: 5px;
+          justify-content: start;
+          align-items: center;
+
+          small {
+            color: var(--Personal-colors-black);
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 0.75;
+          }
+        }
+
+        @media (max-width: 992px) {
+          justify-content: start;
+          justify-items: start;
+          p,
+          span {
+            font-size: 12px;
+          }
+        }
+
+        @media (max-width: 768px) {
+          display: grid;
+          grid-auto-flow: column;
+          justify-content: space-between;
+          padding: 10px;
+        }
+      }
+    }
+
+    &__icons {
+      display: grid;
+      grid-template: 1fr / repeat(5, 1fr);
+      column-gap: 20px;
+      padding-top: 20px;
+
+      div {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: center;
+        column-gap: 10px;
+        padding: 10px 5px;
+        border-radius: 10px;
+        border: 0.2px solid rgba(0, 0, 0, 0.1);
+        background: #fff;
+        box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
 
         p {
           color: var(--Personal-colors-black);
-          font-size: 24px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 500;
           line-height: normal;
         }
+
+        @media (max-width: 768px) {
+          padding: 8px;
+        }
+      }
+
+      @media (max-width: 992px) {
+        padding-top: 0;
+        padding-left: 15px;
+        grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+        grid-gap: 5px;
+
+        .item {
+          &__full {
+            grid-column: 1 / -1;
+          }
+
+          &__left {
+            grid-column: 1;
+          }
+
+          &__right {
+            grid-column: 2;
+          }
+        }
+
+        svg {
+          width: 26px;
+          height: 26px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        padding-left: 0;
       }
     }
 
-    &__info {
+    &__icons_manager_completed {
       display: grid;
-      grid-template: 1.2fr 1fr / 1fr;
-      row-gap: 20px;
-      padding: 0 20px;
-      border-right: 1px solid var(--Card-separator);
+      grid-auto-flow: row;
+      padding-left: 20px;
 
-      &__data {
+      @media (max-width: 992px) {
+        padding-left: 15px;
+      }
+
+      @media (max-width: 768px) {
+        padding-left: 0;
+        row-gap: 10px;
+      }
+
+      .top {
         display: grid;
-        grid-template: 1fr / 3fr 4fr 2fr;
+        grid-template: 1fr / repeat(2, 1fr);
+        column-gap: 10px;
+        padding-bottom: 20px;
         border-bottom: 1px solid var(--Card-separator);
 
-        div {
-          display: grid;
-          grid-auto-flow: column;
-          column-gap: 10px;
-          justify-content: start;
-          align-items: center;
-          p {
-            color: var(--Personal-colors-black);
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 0.75;
-          }
-
-          span {
-            color: var(--Personal-colors-black);
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 0.75;
-
-            display: grid;
-            grid-auto-flow: column;
-            column-gap: 5px;
-            justify-content: start;
-            align-items: end;
-
-            small {
-              color: var(--Personal-colors-black);
-              font-size: 10px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 0.75;
-            }
-          }
+        @media (max-width: 992px) {
+          padding-bottom: 15px;
         }
-      }
 
-      &__data__completed {
-        display: grid;
-        grid-auto-flow: row;
-        border-bottom: 1px solid var(--Card-separator);
-
-        .row {
-          display: grid;
-          grid-template: 1fr / 1.5fr 1fr;
-
-          div {
-            display: grid;
-            grid-auto-flow: column;
-            column-gap: 10px;
-            justify-content: start;
-            align-items: center;
-            p {
-              color: var(--Personal-colors-black);
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 0.75;
-            }
-            span {
-              color: var(--Personal-colors-black);
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 0.75;
-
-              display: grid;
-              grid-auto-flow: column;
-              column-gap: 5px;
-              justify-content: start;
-              align-items: end;
-
-              small {
-                color: var(--Personal-colors-black);
-                font-size: 10px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: 0.75;
-              }
-            }
-          }
+        @media (max-width: 768px) {
+          padding-bottom: 0;
+          border-bottom: none;
         }
-      }
-
-      &__icons {
-        display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
-        column-gap: 20px;
 
         div {
           display: grid;
           grid-auto-flow: column;
           align-items: center;
+          justify-content: center;
           column-gap: 10px;
-          padding: 10px 20px;
-          border-radius: 8px;
-          border: 1px solid var(--Personal-colors-main);
+          padding: 10px 5px;
+          border-radius: 10px;
+          border: 0.2px solid rgba(0, 0, 0, 0.1);
+          background: #fff;
+          box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
 
           p {
             color: var(--Personal-colors-black);
@@ -201,93 +385,180 @@
             font-weight: 500;
             line-height: normal;
           }
-        }
-      }
 
-      &__icons_completed {
-        display: grid;
-        grid-template: 1fr / 1fr 1fr;
-        column-gap: 20px;
-        div {
-          display: grid;
-          grid-auto-flow: column;
-          align-items: center;
-          column-gap: 10px;
-          padding: 10px 20px;
-          border-radius: 8px;
-          border: 1px solid var(--Personal-colors-main);
+          @media (max-width: 768px) {
+            padding: 10px 5px;
 
-          p {
-            text-align: end;
-            color: var(--Personal-colors-black);
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
+            svg {
+              width: 26px;
+              height: 26px;
+            }
           }
         }
       }
-      &__icons_completed_report {
-        display: grid;
-        grid-template: 1fr / 1fr 1fr 2fr;
-        column-gap: 20px;
-        div {
-          display: grid;
-          grid-auto-flow: column;
-          align-items: center;
-          column-gap: 10px;
-          padding: 10px 20px;
-          border-radius: 8px;
-          border: 1px solid var(--Personal-colors-main);
 
-          p {
-            text-align: end;
-            color: var(--Personal-colors-black);
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
-          }
+      .bottom {
+        display: grid;
+        padding-top: 20px;
+
+        @media (max-width: 992px) {
+          padding-top: 15px;
+        }
+
+        @media (max-width: 768px) {
+          padding-top: 0;
+        }
+
+        big {
+          font-size: 12px;
+          padding: 15px;
         }
       }
     }
-  }
 
-  .subcard {
-    display: grid;
-    grid-auto-flow: row;
-    align-items: center;
-    border-right: 1px solid var(--Personal-colors-main);
-    border-left: 1px solid var(--Personal-colors-main);
-    border-top: 1px solid var(--Personal-colors-main);
-    row-gap: 10px;
-    padding: 10px;
-    border-radius: 12px 12px 0 0;
+    &__icons_manager_request_approve {
+      display: grid;
+      grid-template: 1fr / repeat(2, 1fr);
+      column-gap: 10px;
+      padding-top: 20px;
+
+      div {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        text-align: center;
+
+        span {
+          color: var(--Personal-colors-black);
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 1;
+        }
+      }
+
+      @media (max-width: 992px) {
+        padding-top: 0;
+        grid-auto-flow: row;
+        grid-template: unset;
+        row-gap: 20px;
+        padding-left: 15px;
+        align-content: center;
+      }
+    }
   }
 }
 
-.card__more {
-  padding: 0 15px;
+.subcard {
   display: grid;
   grid-auto-flow: row;
-  justify-content: space-between;
-  align-content: space-between;
   align-items: center;
-
-  &__icon {
-    display: grid;
-    align-items: center;
-    justify-content: center;
+  @media (max-width: 768px) {
+    min-height: 500px;
   }
+}
+
+.subcard__md {
+  display: grid;
+  grid-template: 1fr min-content / 1fr;
+  align-items: center;
+  min-height: 500px;
+
+  .top {
+    display: grid;
+    grid-template: 1fr min-content / 1fr;
+    padding: 12px;
+    row-gap: 15px;
+    height: 100%;
+    align-items: flex-start;
+  }
+}
+
+.card__features {
+  display: grid;
+  grid-auto-flow: row;
+  align-content: space-between;
+  justify-items: center;
 
   svg {
     width: 30px;
   }
+
+  &__more,
+  &__ts,
+  &__chat {
+    display: grid;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__more,
+  &__ts {
+    justify-content: center;
+  }
+
+  @media (max-width: 768px) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px 15px;
+  }
 }
 
-.chat__btn {
+.buttons__md {
   display: grid;
-  align-items: flex-end;
+  grid-template: 1fr / repeat(2, 1fr);
+  column-gap: 10px;
+  grid-area: item4;
+  margin: 0 15px;
+
+  .ts__btn {
+    display: grid;
+    align-items: flex-end;
+
+    button {
+      display: grid;
+      align-content: center;
+      justify-content: center;
+      background: var(--Gradients-Gradient-1);
+      box-shadow: 0px 3px 6px 0px rgba(43, 90, 212, 0.42);
+      border-radius: 12px;
+      height: 40px;
+
+      svg {
+        --start-color: var(--Personal-colors-White);
+        --end-color: var(--Personal-colors-White);
+        height: 18px;
+      }
+    }
+  }
+
+  .chat__btn {
+    display: grid;
+    align-items: flex-end;
+
+    button {
+      display: grid;
+      align-content: center;
+      justify-content: center;
+      background: var(--Gradients-Gradient-1);
+      box-shadow: 0px 3px 6px 0px rgba(43, 90, 212, 0.42);
+      border-radius: 12px;
+      height: 40px;
+
+      svg {
+        height: 18px;
+      }
+    }
+
+    p {
+      color: var(--Personal-colors-White);
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 1;
+    }
+  }
 }
 
 .card__btn {
@@ -296,7 +567,6 @@
   column-gap: 10px;
   align-items: center;
   justify-content: center;
-  padding: 12px 0;
   width: 100%;
 
   color: var(--Personal-colors-White);
@@ -304,7 +574,12 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  line-height: 0.75;
-  border-radius: 0px 0px 16px 16px;
+  padding: 12px;
+  border-radius: 0px 0px 20px 20px;
+
   background: var(--Gradients-Gradient-1);
+
+  @media (max-width: 768px) {
+    padding: 8px;
+  }
 }
