feat: full Blooggers offers  page Adaptive

--- a/src/features/channel/addChannel/UI/styles.module.scss
+++ b/src/features/channel/addChannel/UI/styles.module.scss
@@ -1,4 +1,12 @@
 .button {
+  padding: 10px 15px;
+  p {
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
   svg {
     width: 24px;
     height: 24px;
