--- a/src/features/offer/acceptOffer/UI/styles.module.scss
+++ b/src/features/offer/acceptOffer/UI/styles.module.scss
@@ -2,20 +2,19 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  border-radius: 8px;
-  padding: 0px;
-  font-weight: 500;
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
-
+  padding: 10px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 12px;
+  border: 0.2px solid rgba(0, 0, 0, 0.1);
   color: var(--Personal-colors-main);
-  border: 1px solid var(--Personal-colors-main);
-  background: var(--Personal-colors-White);
-
-  &:hover {
-    background: rgb(237, 237, 237);
-  }
+  background: #fff;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .popover {
