--- a/src/features/offer/rejectOffer/UI/styles.module.scss
+++ b/src/features/offer/rejectOffer/UI/styles.module.scss
@@ -1,7 +1,11 @@
 .button {
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  border-radius: 12px;
+  border: 0.2px solid rgba(0, 0, 0, 0.1);
+  background: #fff;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 }
