--- a/src/features/offer/seePost/UI/styles.module.scss
+++ b/src/features/offer/seePost/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .button {
-  padding: 10px;
-  font-size: 16px;
+  padding: 12px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  line-height: 1;
 }
