--- a/src/features/offer/sendLink/UI/styles.module.scss
+++ b/src/features/offer/sendLink/UI/styles.module.scss
@@ -1,25 +1,20 @@
 .button {
-  // display: grid;
-  // gap: 5px;
-  // grid-template: 1fr / auto 20px;
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 10px;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 500;
   width: 100%;
   height: 100%;
   cursor: pointer;
   border-radius: 12px;
-  padding: 10px;
+  padding: 5px 10px;
 
   color: var(--Personal-colors-White);
   background: var(--Gradients-Gradient-1);
-
-  svg {
-    color: #fff;
-    margin-left: 5px;
-  }
+  box-shadow: 0px 3px 6px 0px rgba(43, 90, 212, 0.42);
 
   &:hover {
     background: #005aa5;
