--- a/src/widgets/barFilter/UI/styles.module.scss
+++ b/src/widgets/barFilter/UI/styles.module.scss
@@ -6,5 +6,9 @@
   .filter {
     display: grid;
     grid-template: 1fr/ 1fr 1fr 1fr;
+
+    @media (max-width: 768px) {
+      grid-template: unset;
+    }
   }
 }
