--- a/src/widgets/offer/myOffers/card/skeleton/styles.module.scss
+++ b/src/widgets/offer/myOffers/card/skeleton/styles.module.scss
@@ -1,58 +1,230 @@
 .card {
   display: grid;
-  grid-template: 1fr / 6fr 3fr 3fr 6fr 1fr;
-  padding: 10px 0;
-  height: 200px;
+  padding: 20px 0;
+  width: 100%;
+  min-height: 180px;
+  grid-template: 1fr / 5.5fr 6.5fr 4.5fr 1fr;
+  position: relative;
 
-  &__title {
+  @media (max-width: 992px) {
+    grid-template: 1fr / 4.5fr 3.5fr 3.5fr 1fr;
+  }
+
+  @media (max-width: 992px) {
+    padding: 15px 0;
+    min-height: 200px;
+  }
+
+  @media (max-width: 768px) {
+    grid-template: 1.3fr 1.7fr 2.2fr / 1fr;
+    grid-auto-flow: row;
+    row-gap: 15px;
+    padding-top: 35px;
+    min-height: 500px;
+
+    &.active__chat {
+      grid-template: 1.3fr 0.5fr 1.7fr 1.6fr / 1fr;
+    }
+  }
+
+  &__description {
     display: grid;
-    grid-template: 1fr 2fr/ 1fr;
-    padding-left: 30px;
+    grid-template: min-content 1fr /1fr;
+    row-gap: 20px;
+    padding: 0 20px;
 
-    &__top {
+    @media (max-width: 768px) {
+      padding: 0 10px;
+      row-gap: 10px;
+    }
+
+    &__data {
       display: grid;
-      grid-template: 1fr / 1fr 2fr 2fr;
+      grid-auto-flow: column;
       align-items: center;
+      justify-content: space-between;
+      padding-bottom: 10px;
 
-      .title {
+      .description {
         display: grid;
-        grid-auto-flow: row;
-        row-gap: 10px;
+        grid-auto-flow: column;
+        column-gap: 10px;
+        align-items: center;
+        justify-content: start;
+
+        div {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+        }
       }
 
       .date {
         display: grid;
         grid-auto-flow: row;
         row-gap: 10px;
-        justify-content: end;
       }
-    }
-
-    &__bottom {
-      display: grid;
-      grid-template: 1fr / 2fr 1fr;
-      align-items: center;
-      column-gap: 20px;
     }
   }
 
   &__info {
     display: grid;
-    align-content: center;
-    grid-auto-flow: row;
-    row-gap: 20px;
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+    column-gap: 10px;
+    row-gap: 10px;
     padding: 0 20px;
 
-    &__data {
+    @media (max-width: 992px) {
+      grid-template: repeat(4, 1fr) / 1fr;
+      row-gap: 2px;
+    }
+
+    @media (max-width: 768px) {
+      padding: 0 10px;
+
+      div {
+        border-radius: 10px;
+      }
+    }
+  }
+
+  &__active,
+  &__wait,
+  &__complite,
+  &__cancel,
+  &__moderation,
+  &__uncomplite,
+  &__check {
+    padding: 0 20px;
+
+    @media (max-width: 992px) {
+      padding: 0 15px;
+    }
+
+    @media (max-width: 768px) {
+      padding: 0 10px;
+    }
+  }
+
+  &__active {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    grid-auto-flow: row;
+    row-gap: 15px;
+
+    &__title {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      padding: 0 40px;
+    }
+
+    &__buttons {
+      display: grid;
+      grid-template: repeat(2, 1fr) / 1fr;
+      row-gap: 5px;
+    }
+  }
+
+  &__wait {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 15px;
+    align-items: center;
+    align-content: center;
+
+    &__title {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      padding: 0 40px;
+    }
+
+    &__buttons {
+      display: grid;
+      gap: 5px;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      > :nth-child(3) {
+        grid-column: span 2;
+      }
+    }
+  }
+
+  &__complite {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    grid-auto-flow: row;
+    justify-content: center;
+    justify-items: center;
+    row-gap: 15px;
+  }
+
+  &__cancel {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    row-gap: 20px;
+
+    &__title {
+      padding: 0 40px;
+    }
+
+    div {
       display: grid;
       grid-auto-flow: row;
       row-gap: 10px;
     }
   }
 
-  &__status {
+  &__moderation {
     display: grid;
     align-items: center;
-    margin-left: 20px;
+    align-content: center;
+    padding: 0 20px;
+
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+    }
+  }
+
+  &__uncomplite {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    grid-auto-flow: row;
+    row-gap: 15px;
+
+    &__title {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      text-align: center;
+      padding: 0 40px;
+    }
+  }
+
+  &__check {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      text-align: center;
+    }
+  }
+
+  .chat__btn {
+    @media (max-width: 768px) {
+      margin: 0 10px;
+    }
   }
 }
